Select datagrid focus on load

--- a/src/StringMaster/Dialogs/LayerSelectDialog.xaml
+++ b/src/StringMaster/Dialogs/LayerSelectDialog.xaml
@@ -63,6 +63,7 @@
             Text="Layers: " />
 
         <DataGrid
+            x:Name="DataGrid"
             Grid.Row="3"
             Grid.Column="0"
             Grid.ColumnSpan="2"
