--- a/src/StringMaster/Resources/DataGrid.xaml
+++ b/src/StringMaster/Resources/DataGrid.xaml
@@ -25,6 +25,7 @@
     </Style>
 
     <Style x:Key="DataGridCellCenter" TargetType="{x:Type DataGridCell}">
+        <Setter Property="BorderThickness" Value="0" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type DataGridCell}">
