--- a/src/StringMaster/Dialogs/LayerCreateDialog.xaml
+++ b/src/StringMaster/Dialogs/LayerCreateDialog.xaml
@@ -25,6 +25,7 @@
                 <ResourceDictionary Source="pack://application:,,,/StringMaster;component/Resources/Button.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/StringMaster;component/Resources/FlatComboBox.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/StringMaster;component/Resources/DataGrid.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/StringMaster;component/Resources/Icons.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <converters:BooleanYesNoConverter x:Key="BooleanYesNoConverter" />
             <Style x:Key="DataGridValue" TargetType="TextBlock">
@@ -82,34 +83,53 @@
             </DataTemplate>
 
             <!--  LineType  -->
-            <DataTemplate x:Key="LayerLineTypeTemplate" DataType="{x:Type models:LayerLinetypeProperty}">
+            <DataTemplate x:Key="LayerLinetypeTemplate" DataType="{x:Type models:LayerLinetypeProperty}">
                 <TextBlock Style="{StaticResource DataGridValue}" Text="{Binding DataContext.Linetype, RelativeSource={RelativeSource AncestorType=Window}}" />
+            </DataTemplate>
+            <DataTemplate x:Key="LayerLinetypeEditTemplate" DataType="{x:Type models:LayerLinetypeProperty}">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Style="{StaticResource DataGridValue}" Text="{Binding DataContext.Linetype, RelativeSource={RelativeSource AncestorType=Window}}" />
+                    <Button
+                        Grid.Column="1"
+                        HorizontalAlignment="Right"
+                        Command="{Binding DataContext.ShowLinetypeDialogCommand, RelativeSource={RelativeSource AncestorType=Window}}">
+                        <Button.Content>
+                            <Image
+                                Width="16"
+                                Height="16"
+                                Source="{StaticResource DotsButton}" />
+                        </Button.Content>
+                    </Button>
+                </Grid>
             </DataTemplate>
 
             <!--  LineWeight  -->
-            <DataTemplate x:Key="LayerLineWeightTemplate" DataType="{x:Type models:LayerLineweightProperty}">
-                <TextBlock Style="{StaticResource DataGridValue}" Text="{Binding DataContext.Lineweight.Name, RelativeSource={RelativeSource AncestorType=Window}}" />
+            <DataTemplate x:Key="LayerLineweightTemplate" DataType="{x:Type models:LayerLineweightProperty}">
+                <TextBlock Style="{StaticResource DataGridValue}" Text="{Binding DataContext.Lineweight, RelativeSource={RelativeSource AncestorType=Window}}" />
             </DataTemplate>
-            <DataTemplate x:Key="LayerLineWeightEditTemplate" DataType="{x:Type models:LayerLineweightProperty}">
-                <ComboBox
-                    ItemsSource="{Binding DataContext.Lineweights, RelativeSource={RelativeSource AncestorType=Window}}"
-                    SelectedItem="{Binding DataContext.Lineweight, RelativeSource={RelativeSource AncestorType=Window}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    Style="{StaticResource ComboBoxFlatStyle}">
-                    <ComboBox.ItemTemplate>
-                        <DataTemplate DataType="models:AcadLineweight">
-                            <StackPanel Orientation="Horizontal">
-                                <!--<Line
-                                    Stroke="Black"
-                                    StrokeThickness="{Binding WeightValue}"
-                                    X1="11"
-                                    X2="60"
-                                    Y1="11"
-                                    Y2="11" />-->
-                                <TextBlock Margin="5,0,0,0" Text="{Binding Name}" />
-                            </StackPanel>
-                        </DataTemplate>
-                    </ComboBox.ItemTemplate>
-                </ComboBox>
+            <DataTemplate x:Key="LayerLineweightEditTemplate" DataType="{x:Type models:LayerLineweightProperty}">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Style="{StaticResource DataGridValue}" Text="{Binding DataContext.Lineweight, RelativeSource={RelativeSource AncestorType=Window}}" />
+                    <Button
+                        Grid.Column="1"
+                        HorizontalAlignment="Right"
+                        Command="{Binding DataContext.ShowLineweightDialogCommand, RelativeSource={RelativeSource AncestorType=Window}}">
+                        <Button.Content>
+                            <Image
+                                Width="16"
+                                Height="16"
+                                Source="{StaticResource DotsButton}" />
+                        </Button.Content>
+                    </Button>
+                </Grid>
             </DataTemplate>
 
             <!--  IsOn  -->
@@ -165,8 +185,8 @@
                 x:Key="PropertyTemplateSelector"
                 LayerColorTemplate="{StaticResource LayerColorTemplate}"
                 LayerFreezeTemplate="{StaticResource LayerFrozenTemplate}"
-                LayerLinetypeTemplate="{StaticResource LayerLineTypeTemplate}"
-                LayerLineweightTemplate="{StaticResource LayerLineWeightTemplate}"
+                LayerLinetypeTemplate="{StaticResource LayerLinetypeTemplate}"
+                LayerLineweightTemplate="{StaticResource LayerLineweightTemplate}"
                 LayerLockedTemplate="{StaticResource LayerLockedTemplate}"
                 LayerNameTemplate="{StaticResource LayerNameTemplate}"
                 LayerOnTemplate="{StaticResource LayerOnTemplate}"
@@ -176,14 +196,12 @@
                 x:Key="PropertyEditTemplateSelector"
                 LayerColorTemplate="{StaticResource LayerColorEditTemplate}"
                 LayerFreezeTemplate="{StaticResource LayerFrozenEditTemplate}"
-                LayerLineweightTemplate="{StaticResource LayerLineWeightEditTemplate}"
+                LayerLinetypeTemplate="{StaticResource LayerLinetypeEditTemplate}"
+                LayerLineweightTemplate="{StaticResource LayerLineweightEditTemplate}"
                 LayerLockedTemplate="{StaticResource LayerLockedEditTemplate}"
                 LayerNameTemplate="{StaticResource LayerNameEditTemplate}"
                 LayerOnTemplate="{StaticResource LayerOnEditTemplate}"
                 LayerPlotTemplate="{StaticResource LayerPlottableEditTemplate}" />
-            <!--
-                LayerLineTypeTemplate="{StaticResource LayerLineTypeEditTemplate}"
-            -->
         </Grid.Resources>
 
         <Grid.ColumnDefinitions>
