--- a/src/StringMaster/UserControls/StringCogoPointsView.xaml
+++ b/src/StringMaster/UserControls/StringCogoPointsView.xaml
@@ -2,6 +2,7 @@
     x:Class="StringMaster.UserControls.StringCogoPointsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:StringMaster.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:helpers="clr-namespace:StringMaster.Helpers"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -22,7 +23,7 @@
                 <ResourceDictionary Source="pack://application:,,,/StringMaster;component/Resources/Icons.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/StringMaster;component/Resources/ComboBox.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+            <converters:BooleanYesNoConverter x:Key="BooleanYesNoConverter" />
             <Style TargetType="Image">
                 <Setter Property="Width" Value="16" />
                 <Setter Property="Height" Value="16" />
@@ -138,7 +139,10 @@
                                     Height="16"
                                     Source="{StaticResource KeyIcon}"
                                     Stretch="Uniform" />
-                                <TextBlock Grid.Column="1" Text="{Binding Key, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                <TextBlock
+                                    Grid.Column="1"
+                                    Margin="5,0,0,0"
+                                    Text="{Binding Key, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                             </Grid>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
@@ -163,6 +167,7 @@
                                 <CheckBox
                                     Grid.Column="0"
                                     Margin="0,0,6,0"
+                                    Cursor="{StaticResource CheckCursor}"
                                     IsChecked="{Binding AcadLayer.IsSelected, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                                 <TextBlock Grid.Column="1" Text="{Binding AcadLayer.Name}" />
                             </Grid>
@@ -171,10 +176,11 @@
                 </DataGridTemplateColumn>
                 <DataGridTemplateColumn Width="50" Header="{helpers:ResourceHelper Name=ColumnHeader2D}">
                     <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
+                        <DataTemplate DataType="models:DescriptionKey">
                             <CheckBox
                                 HorizontalAlignment="Center"
                                 VerticalContentAlignment="Center"
+                                Content="{Binding Draw2D, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource BooleanYesNoConverter}}"
                                 Cursor="{StaticResource CheckCursor}"
                                 IsChecked="{Binding Draw2D, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                         </DataTemplate>
@@ -182,10 +188,11 @@
                 </DataGridTemplateColumn>
                 <DataGridTemplateColumn Width="50" Header="{helpers:ResourceHelper Name=ColumnHeader3D}">
                     <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
+                        <DataTemplate DataType="models:DescriptionKey">
                             <CheckBox
                                 HorizontalAlignment="Center"
                                 VerticalContentAlignment="Center"
+                                Content="{Binding Draw3D, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource BooleanYesNoConverter}}"
                                 Cursor="{StaticResource CheckCursor}"
                                 IsChecked="{Binding Draw3D, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                         </DataTemplate>
@@ -193,10 +200,11 @@
                 </DataGridTemplateColumn>
                 <DataGridTemplateColumn Width="50" Header="{helpers:ResourceHelper Name=ColumnHeaderFeatureLine}">
                     <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
+                        <DataTemplate DataType="models:DescriptionKey">
                             <CheckBox
                                 HorizontalAlignment="Center"
                                 VerticalContentAlignment="Center"
+                                Content="{Binding DrawFeatureLine, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource BooleanYesNoConverter}}"
                                 Cursor="{StaticResource CheckCursor}"
                                 IsChecked="{Binding DrawFeatureLine, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                         </DataTemplate>
@@ -206,38 +214,6 @@
                     Width="100"
                     Binding="{Binding MidOrdinate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, FallbackValue=0.01}"
                     Header="{helpers:ResourceHelper Name=ColumnHeaderMidOrdinate}" />
-                <!--<DataGridTemplateColumn Width="120" Header="{helpers:ResourceHelper Name=ColumnHeaderColor}">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate DataType="models:DescriptionKey">
-                            <ComboBox
-                                x:Name="ComboBox"
-                                Height="21"
-                                HorizontalAlignment="Stretch"
-                                VerticalContentAlignment="Center"
-                                Background="Transparent"
-                                ItemsSource="{Binding ColorPicker.Colors, RelativeSource={RelativeSource AncestorType=UserControl}}"
-                                SelectedItem="{Binding AcadColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                SelectionChanged="ComboBox_OnSelectionChanged"
-                                Style="{StaticResource ComboBoxFlatStyle}">
-                                <ComboBox.ItemTemplate>
-                                    <DataTemplate DataType="models:AcadColor">
-                                        <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
-                                            <Label
-                                                Width="15"
-                                                Height="15"
-                                                Margin="0,0,3,0"
-                                                Background="{Binding ColorBrush}"
-                                                BorderBrush="Black"
-                                                BorderThickness="1"
-                                                Visibility="{Binding IsVisible, Converter={StaticResource BooleanToVisibilityConverter}}" />
-                                            <TextBlock Text="{Binding Name}" />
-                                        </StackPanel>
-                                    </DataTemplate>
-                                </ComboBox.ItemTemplate>
-                            </ComboBox>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>-->
             </DataGrid.Columns>
         </DataGrid>
     </DockPanel>
