--- a/src/StringMaster/Dialogs/LayerCreateDialog.xaml
+++ b/src/StringMaster/Dialogs/LayerCreateDialog.xaml
@@ -58,28 +58,33 @@
                 </StackPanel>
             </DataTemplate>
             <DataTemplate x:Key="LayerColorEditTemplate">
-                <ComboBox
-                    x:Name="ComboBox"
-                    HorizontalAlignment="Stretch"
-                    VerticalContentAlignment="Center"
-                    ItemsSource="{Binding DataContext.ColorDialogService.Colors, RelativeSource={RelativeSource AncestorType=Window}}"
-                    SelectedItem="{Binding DataContext.AcadColor, RelativeSource={RelativeSource AncestorType=Window}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    Style="{StaticResource ComboBoxFlatStyle}">
-                    <ComboBox.ItemTemplate>
-                        <DataTemplate DataType="models:AcadColor">
-                            <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
-                                <Label
-                                    Width="15"
-                                    Height="14"
-                                    Margin="0,0,8,0"
-                                    Background="{Binding ColorBrush}"
-                                    BorderBrush="Black"
-                                    BorderThickness="1" />
-                                <TextBlock Text="{Binding NameStringLower}" />
-                            </StackPanel>
-                        </DataTemplate>
-                    </ComboBox.ItemTemplate>
-                </ComboBox>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <StackPanel Margin="5,0,0,0" Orientation="Horizontal">
+                        <Label
+                            Width="15"
+                            Height="14"
+                            Margin="0,0,8,0"
+                            Background="{Binding DataContext.AcadColor.ColorBrush, RelativeSource={RelativeSource AncestorType=Window}, UpdateSourceTrigger=PropertyChanged}"
+                            BorderBrush="Black"
+                            BorderThickness="1" />
+                        <TextBlock Text="{Binding DataContext.AcadColor.NameStringLower, RelativeSource={RelativeSource AncestorType=Window}, UpdateSourceTrigger=PropertyChanged}" />
+                    </StackPanel>
+                    <Button
+                        Grid.Column="1"
+                        HorizontalAlignment="Right"
+                        Command="{Binding DataContext.ShowColorDialogCommand, RelativeSource={RelativeSource AncestorType=Window}}">
+                        <Button.Content>
+                            <Image
+                                Width="16"
+                                Height="16"
+                                Source="{StaticResource DotsButton}" />
+                        </Button.Content>
+                    </Button>
+                </Grid>
             </DataTemplate>
 
             <!--  LineType  -->
