--- a/src/StringMaster/Palettes/StringCogoPointsView.xaml
+++ b/src/StringMaster/Palettes/StringCogoPointsView.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="StringMaster.UserControls.StringCogoPointsView"
+    x:Class="StringMaster.Palettes.StringCogoPointsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:converters="clr-namespace:StringMaster.Converters"
