--- a/src/StringMaster/Resources/Icons.xaml
+++ b/src/StringMaster/Resources/Icons.xaml
@@ -17,4 +17,5 @@
     <BitmapImage x:Key="LayerUnlockImage" UriSource="pack://application:,,,/StringMaster;component/Resources/Icons/unlocked.png" />
     <BitmapImage x:Key="KeyIcon" UriSource="pack://application:,,,/StringMaster;component/Resources/Icons/key.png" />
     <BitmapImage x:Key="DotsButton" UriSource="pack://application:,,,/StringMaster;component/Resources/Icons/dotsbutton.png" />
+    <BitmapImage x:Key="ImportToolBarIcon" UriSource="pack://application:,,,/StringMaster;component/Resources/Icons/import.png" />
 </ResourceDictionary>
