--- a/src/StringMaster.UI/Palettes/StringCogoPointsView.xaml
+++ b/src/StringMaster.UI/Palettes/StringCogoPointsView.xaml
@@ -28,8 +28,8 @@
                 <Setter Property="Width" Value="16" />
                 <Setter Property="Height" Value="16" />
             </Style>
-            <Cursor x:Key="PlusCursor">pack://application:,,,/StringMaster;component/Resources/Cursors/pluscursor.cur</Cursor>
-            <Cursor x:Key="CheckCursor">pack://application:,,,/StringMaster;component/Resources/Cursors/checkmark.cur</Cursor>
+            <Cursor x:Key="PlusCursor">pack://application:,,,/StringMaster.UI;component/Resources/Cursors/pluscursor.cur</Cursor>
+            <Cursor x:Key="CheckCursor">pack://application:,,,/StringMaster.UI;component/Resources/Cursors/checkmark.cur</Cursor>
         </ResourceDictionary>
     </UserControl.Resources>
     <DockPanel Margin="8,0,0,0">
